k8s/01-vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: practical-work-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault-sa
      containers:
      - name: vault
        image: ghcr.io/sy-rex/vault:1.19.3
        ports:
        - containerPort: 8200
        volumeMounts:
        - name: config
          mountPath: /vault/config
        - name: data
          mountPath: /vault/data
      volumes:
      - name: config
        configMap:
          name: vault-config
      - name: data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: practical-work-3
spec:
  type: ClusterIP
  ports:
  - port: 8200
    targetPort: 8200
    name: http
  selector:
    app: vault
---
apiVersion: v1
kind: Service
metadata:
  name: vault-ui
  namespace: practical-work-3
spec:
  type: NodePort
  ports:
  - port: 8200
    targetPort: 8200
    nodePort: 30000
  selector:
    app: vault
